changed images so they would stop distorting

--- a/style.css
+++ b/style.css
@@ -94,4 +94,5 @@ img {
   border-style: outset;
   border-width: 5px;
   border-color: rgba(168, 22, 22, 0.65);
+  max-width: 100%;
 }
